...
/// A password field with a show/hide toggle.
class PasswordField extends StatefulWidget {
  const PasswordField({
    super.key,
    required this.controller,
    required this.validator,
    this.label = 'Password',
    this.autofillHint = AutofillHints.password,
    this.errorText,
    this.textInputAction,
    this.onSubmitted,
  });

...
